<resources>
    <string name="app_name">Trackervision</string>
    <string name="please_login_to_continue">Please Login To Continue</string>
    <string name="don_t_have_an_account_sign_up_below">Don\'t Have An Account? Sign Up Below:</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_sign_up_to_continue">Please Sign Up To Continue</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_details">UserDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="wrong_user">Is this not you? Click the button below to log out:</string>
    <string name="schedule_view">My Schedule</string>
    <string name="log_view">My Log</string>
    <string name="watchlist_view">My Watchlist</string>
    <string name="add_episode">Add Episode</string>
    <string name="view_schedule">View Schedule</string>
    <string name="schedule_add">Please add the details of your show below:</string>
    <string name="save">Save</string>
    <string name="empty_schedule">No Episodes Currently Saved To Schedule</string>
    <string name="recommendations">Recommendations</string>
    <string name="trending">Trending</string>
    <string name="top_rated">All Time Top Rated</string>
    <string name="airing_today">Airing Today</string>
    <string name="airing_next_7">Airing Next 7 Days</string>
    <string name="TMDB_Declaration">Trackervision uses TMDB and the TMDB APIs but is not endorsed, certified, or otherwise approved by TMDB.</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results For: </string>
    <string name="no_results">No Results Found</string>
    <string name="add_to_watchlist">Add To Watchlist</string>
    <string name="add_to_Log">Add To Log</string>
    <string name="overview">Overview</string>
    <string name="origin_country">Country Of Origin</string>
    <string name="original_language">Original Language</string>
    <string name="original_name">Original Name</string>
    <string name="first_aired">First Aired On</string>
    <string name="average_rating">Average Rating: </string>
    <string name="empty_watchlist">No Shows Currently Saved To Watchlist</string>
    <string name="empty_log">No Shows Currently Saved To Log</string>
    <string name="date_completed">Date Completed:</string>




    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>